--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "start": "node dist/index.js",
     "build": "tsc",
     "i18n": "typesafe-i18n",
+    "lint": "eslint src --ext .ts",
+    "prettier": "prettier --write src",
     "scripts:generate": "ts-node scripts/generate.ts"
   },
   "dependencies": {
@@ -42,6 +44,12 @@
   "devDependencies": {
     "@types/express": "^4.17.20",
     "@types/node": "^20.8.10",
+    "@typescript-eslint/eslint-plugin": "^6.11.0",
+    "@typescript-eslint/parser": "^6.11.0",
+    "eslint": "^8.54.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.1",
+    "prettier": "^3.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   }
